1.0-beta6
---------
age input neurons
started testing a corpse entity
discovered and fixed retina to input mapping bug
visibility enhancement by allowing only bright colors
bullet hit: half of lifetime lost
--small, --medium, --big and --huge options

1.0-beta5
---------
Options have boundary checks now
improved command line option handling
f1 pauses and prints settings / keys
increased evolution rate by tuned defaults settings
fixed README mistakes

1.0-beta4
---------
adaptable colorneurons, default is now 3 instead of 2
adaptable retinasize, default is nog 7 instead of 10
all (38) initial brain settings have been made adaptable
provided an option to flip newborn critters 180 degrees
simple --help implemented
many minor fixes and cleanups

1.0-beta3
---------
fixes minor memleaks & speedups
brain.clearInputs() implementation                             
critter & food size have been made adaptable
make sure we only load files with extension cr
Retinas Per Row is now adaptable
default critter sight distance reduced from 50 to 40: performance boost
follow camera handles critter sight distance
cleaned up settings reporting
updated README
Start of a Changelog